# kubernetes-autoscaler

./: Dockerfile  README.md  app-deployment.yaml  app-hpa.yaml  prometheus-adapter-config.yaml  prometheus-adapter-config2.yaml  pyproject.toml
