[project]
name = "elastic-ml-inference"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Taimur Ibrahim", email = "tai.him18@gmail.com" },
]
dependencies = [
    "uvicorn>=0.30.1",
    "litestar>=2.9.1",
    "msgspec>=0.18.6",
    "pydantic>=2.7.4",
    "torchvision>=0.18.1",
    "pillow>=10.3.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[[tool.pdm.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
type = "find_links"
include_packages = ["torch", "torchvision"]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.7",
    "pytest-mock>=3.14.0",
    "covdefaults>=2.3.0",
]
typing = [
    "mypy>=1.10.1",
]
dev = [
    "pre-commit>=3.7.1",
    "ruff>=0.5.0",
    "httpx>=0.27.0",
]

